--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,9 @@
         española de cardiología en noviembre de 2019.
     </string>
 
-    <string name="creadorInfo">Desarrollo de la aplicación</string>
-    <string name="desarrolloInfo">
-        Este proyecto está desarollado por Alejandro Expósito Ortiz, programador de software especializado en desarrollo de aplicaciones de telefónicas y
-        cursando el grado superior de "Desarrollo de Aplicaciones Multiplataforma (DAM)".
+    <string name="creadorInfo">Desarrollo</string>
+    <string name="infoCreadorInfo">
+        Este proyecto está desarollado por Alejandro Expósito Ortiz, desarrollador de software especializado en
     </string>
 
     <!--Archivo de sharedePreference-->
